# USM_Final

./: CMakeLists.txt  main.cpp
cpp_files/cpp/: course.cpp  data_control.cpp  menu.cpp  staff.cpp  student.cpp  university.cpp  user.cpp
cpp_files/headers/: course.h  data_control.h  menu.h  staff.h  student.h  university.h  user.h
csv_data_files/Couses Data/: coursesCode.csv  coursesCredit.csv  coursesDep.csv  coursesName.csv
csv_data_files/Faculties Data/: All Dep.csv  Faculties.csv
csv_data_files/UserData/: department.csv  email.csv  firstname.csv  id.csv  lastname.csv  officehours.csv  pass.csv  role.csv
csv_data_files/UserData/Courses/: course1.csv  course2.cvs
